--- a/Sema vodovodne instalacije/.project
+++ b/Sema vodovodne instalacije/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Sema vodovodne instalacije</name>
+	<name>aradGraphicsEditor</name>
 	<comment></comment>
 	<projects>
 	</projects>
